<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:layout_gravity="center"
    tools:context=".firebase_auth.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/text_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mailIconIV"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center|start"
                    android:layout_weight="0"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/mail_icon"
                    app:srcCompat="@android:drawable/sym_action_email" />

                <EditText
                    android:id="@+id/lMailET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="#FFFBFB"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="none|text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/text_background"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/lockIV"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:contentDescription="@string/password_icon"
                    app:srcCompat="@android:drawable/ic_secure" />

                <EditText
                    android:id="@+id/lPasswordET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="none|textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:padding="30dp">


                <Button
                    android:id="@+id/loginB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_background"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:backgroundTint="#000000" />

                <TextView
                    android:id="@+id/registerTV"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginB"
                    android:layout_alignStart="@+id/loginB"
                    android:layout_alignEnd="@+id/loginB"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="@string/new_user_register_here" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:foregroundGravity="center"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>