<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:hapticFeedbackEnabled="true"
    tools:context=".menu.profile.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/presence_offline" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            app:srcCompat="@drawable/cover_gradient" />

        <LinearLayout
            android:id="@+id/profileElements"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/editPB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coverImage">

            <EditText
                android:id="@+id/nickET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@color/white_smoke"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nickname"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_smoke"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rBirthdateTV"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_smoke"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/surnameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_smoke"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="Surname..."
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/instaET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="16dp"
                android:background="@color/white_smoke"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/instagram"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_smoke"
                android:ems="10"
                android:enabled="true"
                android:gravity="center"
                android:hint="Phone number.."
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <Button
            android:id="@+id/editPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_background"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="#000000"
            app:layout_constraintBottom_toTopOf="@+id/changePB"
            app:layout_constraintEnd_toEndOf="@+id/changePB"
            app:layout_constraintStart_toStartOf="@+id/changePB" />

        <Button
            android:id="@+id/changePB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_background"
            android:text="@string/change_password"
            android:textColor="@color/black"
            app:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginBottom="-20dp"
            android:src="@drawable/gym2"
            android:visibility="visible"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/coverImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileLayout"
        app:layout_constraintStart_toStartOf="@+id/profileLayout"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>




